# CapabilityCommons

./: .env.example  .env.production  .env.staging  .gitignore  .gitmodules  CONTRIBUTING.md  Dockerfile  FILE_TREE.txt  IMPLEMENTATION_NOTES.md  README.md  STATUS.md  TODO.md  VISION.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
capability_commons_module_seed_pack_v1/: README.md
deploy/: Caddyfile  backup.sh  restore.sh
docs/: API_GAPS.md  ARCHITECTURE.md  DEPLOY_CHECKLIST.md  DEPLOY_GUIDE.md  OPERATIONAL_TASKS.md  PRODUCTION_DEPLOY.md  REMAINING_TIER1_GUIDE.md  VISION.md
eval/: README.md
expanded_seed/: README.md
ingestion/: README.md  content_object_template.yaml  corpus_conversion_guide.md  extraction_matrix_template.csv  llm_prompt_templates.json
permaculture_pack/: homestead_permaculture_first_100_nodes.csv  homestead_permaculture_ingestion_blueprint.md
tests/: conftest.py  test_answer_composer_envelope.py  test_audit.py  test_auth.py  test_auth_wiring.py  test_embedding.py  test_entity_merge.py  test_eval_harness.py  test_evidence_routes.py  test_health.py  test_ingest_draft_schema.py  test_ingest_llm_client.py  test_ingest_load.py  test_ingest_models.py  test_ingest_parse.py  test_ingest_passes.py  test_ingest_project.py  test_ingest_publish_gate.py  test_integration.py  test_integration_audit.py  test_integration_embedding.py  test_integration_publication.py  test_integration_retrieval.py  test_integration_search.py  test_integration_storage.py  test_job_tracker.py  test_logging.py  (+14 more)
(+289 files in other folders)
