[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capability-commons-agentic-lite"
version = "0.1.0"
description = "FastAPI/Pydantic/SQLAlchemy scaffold for the Capability Commons Agentic Data Lite substrate"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "sqlalchemy>=2.0.48,<2.1",
  "asyncpg>=0.30,<1.0",
  "alembic>=1.16,<2.0",
  "pydantic>=2.12,<3.0",
  "pydantic-settings>=2.10,<3.0",
  "pgvector>=0.4,<1.0",
  "orjson>=3.10,<4.0",
  "markdown-it-py>=3.0,<4.0",
  "python-slugify>=8.0,<9.0",
  "psycopg2-binary>=2.9,<3.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9.0",
  "pytest-asyncio>=0.26,<1.0",
  "httpx>=0.28,<1.0",
  "asgi-lifespan>=2.1,<3.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
